--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,195 @@
-.App {
-  text-align: center;
+.login-button {
+  display: flex;
+  justify-content: flex-end;
+  margin: 30px;
+}
+.login {
+  cursor: pointer;
+  margin-left: 10px;
+  line-height: 15px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-section {
+  display: flex;
+  justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.menu-list {
+  display: flex;
+  list-style-type: none;
+}
+.menu-list li{
+  padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.menu-list li a{
+  text-decoration: none;
+  color:black;
+  margin-left:20px;
+}
+
+.nav-menu-area{
+  display: flex;
+  justify-content: center;
+}
+.burger-menu{
+  margin-left: 20px;
+  margin-top: 20px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.menu-area {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search-box {
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  position: absolute;
+  right: 30px;
+  border-bottom: 1px solid black;
+  margin-bottom: 25px;
+}
+
+.search-box input {
+  border: none;
+  margin-left: 5px;
+}
+
+.search-box input:focus {
+  outline: none;
+}
+
+.card{
+  border:none !important;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.choice{
+  font-size:11px;
+  color: #63786a;
+  font-weight: bold;
+  height: 20px;
+}
+
+.new-product {
+  font-size: 11px;
+  height: 20px;
+}
+.card:hover {
+  transform: scale(1.05);
+}
+
+.login-form {
+  width: 40em;
+}
+
+.login-area {
+  display: flex;
+  justify-content: center;
+}
+
+.product-img {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.product-info{
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+.drop-down{
+  margin-top:20px;
+}
+
+.add-button{
+  margin-top:20px;
+  width: 100%;
+}
+
+.logo {
+  cursor: pointer;
+}
+
+.hide{
+  visibility:hidden
+}
+
+.side-menu {
+  height: 100%;
+  width: 250px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: burlywood;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  z-index:2
+}
+.side-menu-list button {
+  margin: 5px;
+  border: none;
+  background: none;
+  width: 120px;
+}
+
+.side-menu .close-btn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+  border: none;
+  background: none;
+}
+
+.side-menu-list {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.side-menu-list button:hover {
+  background-color: beige;
+  border-radius: 3px;
+} 
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 80rem) {
+  .hide {
+    visibility:visible;
   }
-  to {
-    transform: rotate(360deg);
+  .menu-list {
+    display: none;
+  }
+  .search-box{
+    display: none;
+  }
+  .main-products-box {
+    margin-top: 30px;
+  }
+  
+  .product-img {
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+  }
+  
+  .product-main-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+  }
+  
+  .add-button {
+    margin-bottom: 20px;
   }
 }
